# rhobear-capturd

./: .gitignore  FEATURE-DIFF.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-msix.yml  deploy-web.yml
capturd/: _net.py  cli.py  pro.py
capturd/mcp/: server.py
capturd/shots/: capture.py  cli.py
capturd/walk/: ai_pipeline.py  cli.py  coordinator.py  exporter.py  recorder.py  schema.py  tts_vertex.py  voice.py
capturd/walk/templates/: viewer.html
director-rig/: README.md  film.py  finish.py  paid_boot.py  revoice.py  scout.py  verify_frames.py
director-rig/tests/: test_adjusted.py  test_finish.py
evidence/: stripe-payment-gates-2026-07-05.md
packaging/: README.md  build-msix.ps1  pyinstaller.spec
packaging/msix/: AppxManifest.xml
scripts/: e2e_live_drive.py  e2e_mcp_stdio.py  e2e_walkthrough_proof.py  mp4_from_json.py
service/: .env.example  API.md  DEPLOY.md  Dockerfile  SAFE-AUTH.md  mcp_service.py  render_worker.py  requirements.txt  set-webhook-secret.sh
service/app/: auth.py  billing.py  config.py  main.py  store.py
service/deploy/: Caddyfile.snippet  capturd-service.service
service/web/: index.html  m.html  manifest.webmanifest  sw.js
service/web/_board/: board.html  manifest.json
service/web/assets/: capturd-bridge.js  capturd-premium.css
skills/capturd-autopilot/: SKILL.md
tests/: test_animation_timeline.py  test_e2e_proof.py  test_live_drive.py  test_service_billing_caps.py  test_ssrf_guard.py  test_tts_vertex.py  test_viewer_spotlight.py  test_voice_loop.py  test_voice_sync.py
web/: dashboard.html  index.html
